--- a/play2.yml
+++ b/play2.yml
@@ -1,14 +1,22 @@
 ---
-- hosts: localhost
+- name: Use the ChatGPT module
+  hosts: localhost
+  gather_facts: false
+  
+  vars_files:
+    - secrets.yml
+
   tasks:
+
     - name: Query ChatGPT using the custom module
-      chatgpt_query:
+      chatgpt2:
         api_key: "{{ openai_api_key }}"
         prompt: "What is the capital of France?"
+        #model: "gpt-3.5-turbo"
         max_tokens: 10
       register: result
 
     - name: Print the response
-      debug:
+      ansible.builtin.debug:
         msg: "{{ result.response.choices[0].text.strip() }}"
 
