--- a/play1.yml
+++ b/play1.yml
@@ -1,17 +1,23 @@
 ---
+
 - name: Use ChatGPT module
   hosts: localhost
   gather_facts: no
+
+  vars_files:
+    - secrets.yml
+
   tasks:
+
     - name: Query ChatGPT
-      chatgpt_module:
+      chatgpt:
         query: "Explain the concept of Ansible modules."
-        api_key: "{{ lookup('env', 'OPENAI_API_KEY') }}"
-        model: "gpt-3.5-turbo"
-        max_tokens: 150
+        api_key: "{{ openai_api_key }}"
+        #model: "gpt-3.5-turbo"
+        max_tokens: 10
       register: result
 
     - name: Print ChatGPT response
-      debug:
+      ansible.builtin.debug:
         msg: "{{ result.response }}"
 
